[omnibox][webui] fix font spacing in WebUI omnibox popup
Updated the font size in WebUI omnibox popup to match the omnibox views
popup.
Before/After screencast demonstrations in bug comment #11

>Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7028920
>Commit-Queue: James Leung <jamesleung@google.com>
>Cr-Commit-Position: refs/heads/main@{#1530489}
(cherry picked from commit a0ca800376729f737edb4828716740d04ec2d896)

Bug: b:448749290, b:452448050
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7057149
Commit-Queue: Nihar Majmudar <niharm@google.com>
Cr-Commit-Position: refs/branch-heads/7444@{#1587}
Cr-Branched-From: 29907d3c18078029695f458b42fb8e6fda3e493d-refs/heads/main@{#1522585}

--- a/chrome/browser/resources/omnibox_popup/app.css
+++ b/chrome/browser/resources/omnibox_popup/app.css
@@ -18,7 +18,11 @@
   --cr-searchbox-results-margin-bottom: 0;
   --cr-searchbox-width: 100%;
   --cr-searchbox-match-font-weight: 700;
-  font-size: 14.6px; /* closely resembles the omnibox input font size. */
+
+  /* Closely resembles the views Omnibox input font size.
+  * TODO(crbug.com/450640041): Investigate webUI blink & views rendering difference */
+  font-size: 14.3px;/* closely resembles the omnibox input font size. */
+
   /* Colors used in the cr-searchbox results dropdown */
   --color-searchbox-answer-icon-background: var(--color-omnibox-answer-icon-g-m3-background);
   --color-searchbox-answer-icon-foreground: var(--color-omnibox-answer-icon-g-m3-foreground);
